# Beanflow-Payroll

./: .gitignore  CLAUDE.md  LICENSE  README.md  start-dev.sh  stop-dev.sh
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py  supabase_client.py
backend/app/models/: __init__.py  auth.py  compensation.py  holiday_pay_config.py  payroll.py  paystub.py  remittance.py  schemas.py  t4.py
backend/app/services/: auth_service.py  compensation_service.py  email_service.py  overtime_calculator.py  payroll_run_service.py
backend/app/utils/: __init__.py  response.py  sin_validator.py
backend/config/payroll_rules/: pay_date_delays.json
backend/config/tax_tables/: README.md
backend/supabase/: README.md  seed.sql
backend/supabase/email-templates/: README.md  confirm_signup.html  invite.html  magic_link.html
backend/supabase/functions/: README.md
backend/supabase/migrations/: 20251216110100_create_payroll_tables.sql  20251216112300_add_companies_pay_groups.sql  20251216130000_fix_rls_auth_uid.sql  20251217160000_add_hours_worked_to_payroll_records.sql  20251217170000_add_sick_leave_and_tags.sql  20251217180000_add_unique_payroll_run_constraint.sql  20251218100000_add_payroll_input_data.sql  20251224223020_add_structured_configs_to_pay_groups.sql  20251224230234_add_tax_calculation_method.sql  20251224240000_add_employee_snapshots.sql  20251227100000_add_address_fields.sql  20251228100000_refactor_td1_claims.sql  20251228110000_simplify_ledger_to_company.sql  20251228120000_add_company_logo.sql  20251228130000_create_assets_storage_bucket.sql  20251228140000_rename_next_pay_date_to_period_end.sql  20251228150000_add_ytd_net_pay.sql  20251229100000_add_sick_leave_config_tables.sql  20251229110000_remove_unused_sick_leave_configs.sql  20251230100000_add_initial_ytd_fields.sql  20251231100000_add_compensation_history.sql  20251231170907_drop_legacy_ledger_id.sql  20251231200000_fix_compensation_constraints.sql  20251231200001_add_compensation_rpc.sql  20251231210000_fix_view_security_invoker.sql  20251231220000_create_statutory_holidays.sql  20251231230000_add_2027_statutory_holidays.sql  20251231240000_create_remittance_periods.sql  20260101100000_add_t4_tables.sql  20260102100000_add_t4_submission_fields.sql  20260102200000_add_ticket_tables.sql  20260102210000_add_admin_support.sql  20260103100000_remove_pay_group_statutory_defaults.sql  20260103200000_remove_employee_optional_deductions.sql  20260103300000_add_employee_tax_claims.sql  20260104100000_add_employee_portal_status.sql  20260104110000_create_profile_change_requests.sql  20260104120000_add_employee_portal_rls.sql  (+28 more)
backend/tests/: __init__.py  conftest.py  test_health.py  test_sick_leave_service.py
backend/tools/: README.md  __init__.py
(+989 files in other folders)
